4078 - remove maxpermsize